--- a/index.html
+++ b/index.html
@@ -404,11 +404,16 @@
                 
                 <div class="flex justify-center floating">
                     <div class="relative">
-                        <div class="w-72 h-72 md:w-96 md:h-96 border-4 border-gold rounded-full profile-glow p-2">
-                            <div class="w-full h-full bg-gradient-to-br from-gold to-darkGold rounded-full flex items-center justify-center text-6xl text-black">
-                                <i class="fas fa-user"></i>
-                            </div>
-                        </div>
+                        <div class="w-72 h-72 md:w-96 md:h-96 border-4 border-gold rounded-full profile-glow p-2 relative z-20">
+ <div class="w-full h-full rounded-full overflow-hidden">
+        <img
+            src="jhanvi.jpg"
+            alt="Jhanvi Mogulla"
+            class="w-full h-full rounded-full object-cover"
+        />
+    </div>
+</div>
+
                         <div class="absolute -top-4 -right-4 w-24 h-24 bg-gold rounded-full flex items-center justify-center gold-border-glow">
                             <i class="fas fa-graduation-cap text-4xl text-black"></i>
                         </div>
